--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@lexical/react": "^0.6.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@supabase/supabase-js": "^2.0.4",
@@ -17,6 +18,7 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "lexical": "^0.6.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
