--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "@vercel/analytics": "^0.1.6",
     "lexical": "^0.4.1",
     "next": "12.2.5",
     "next-auth": "^4.18.4",
