--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
     "@vercel/analytics": "^0.1.6",
+    "dayjs": "^1.11.7",
+    "gray-matter": "^4.0.3",
     "lexical": "^0.4.1",
     "next": "12.2.5",
     "next-auth": "^4.18.4",
@@ -29,6 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
@@ -43,6 +47,10 @@
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "prisma": "^4.3.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-prism-plus": "^1.5.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
