--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@lexical/react": "^0.4.1",
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -24,12 +23,11 @@
     "@vercel/analytics": "^0.1.6",
     "dayjs": "^1.11.7",
     "gray-matter": "^4.0.3",
-    "lexical": "^0.4.1",
-    "next": "12.2.5",
+    "next": "^13.1.6",
     "next-auth": "^4.18.4",
     "next-mdx-remote": "^4.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
@@ -44,7 +42,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.10",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.1.6",
     "postcss": "^8.4.16",
     "prisma": "^4.3.1",
     "rehype-code-titles": "^1.1.0",
