--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^13.1.6",
     "next-auth": "^4.18.4",
     "next-mdx-remote": "^4.3.0",
+    "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
