--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
     "@next/mdx": "^13.1.5",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@vercel/analytics": "^0.1.6",
     "dayjs": "^1.11.7",
     "gray-matter": "^4.0.3",
