--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.10",
+    "clsx": "^1.2.1",
     "eslint": "8.22.0",
     "eslint-config-next": "^13.3.0",
     "postcss": "^8.4.16",
