--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.9.4",
-    "shiki": "^0.14.1"
+    "shiki": "^0.14.1",
+    "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
